[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muonledger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mpmath",
    "python-dateutil",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
muonledger = "muonledger.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/muonledger"]
