[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muonledger"
version = "0.9.0"
requires-python = ">=3.11"
dependencies = [
    "mpmath",
    "python-dateutil",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
muonledger = "muonledger.cli:main"

[tool.pytest.ini_options]
markers = [
    "parsing: Parsing edge case tests",
    "arithmetic: Arithmetic edge case tests",
    "format_output: Format output edge case tests",
    "missing_feature: Missing feature detection tests",
    "error_messages: Error message quality tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/muonledger"]
